--- a/frontend/header.html
+++ b/frontend/header.html
@@ -1,38 +1,58 @@
-<header>
+<!-- This file would contain the common header code -->
+<header id="mainHeader">
     <div class="header-container">
-        <div class="logo">
-            <a href="index.html"><img src="images/logo.webp" alt="HSPH"></a>
-        </div>
-        <nav class="desktop-nav">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="sermons.html">Sermons</a></li>
-                <li><a href="ministries.html">Ministries</a></li>
-                <li><a href="orphanage.html">Orphanage</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="volunteer.html">Get Involved</a></li>
-                <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
-            </ul>
-        </nav>
-
-        <!-- ✅ Mobile Menu Button -->
-        <button id="menuButton" class="mobile-menu-button mobile-only">☰</button>
-
-        <!-- ✅ Mobile Navigation -->
-        <nav class="mobile-nav" id="mobileNav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="sermons.html">Sermons</a></li>
-                <li><a href="ministries.html">Ministries</a></li>
-                <li><a href="orphanage.html">Orphanage</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="volunteer.html">Get Involved</a></li>
-                <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
+      </div>
+      <nav class="desktop-nav">
+        <ul class="nav-links">
+          <li><a href="home.html">
+              <span class="english-text">Home</span>
+              <span class="telugu-text">హోమ్</span>
+            </a></li>
+          <li><a href="sermons.html">
+              <span class="english-text">Sermons</span>
+              <span class="telugu-text">ప్రసంగాలు</span>
+            </a></li>
+          <li><a href="ministries.html">
+              <span class="english-text">Ministries</span>
+              <span class="telugu-text">సేవలు</span>
+            </a></li>
+          <li><a href="events.html">
+              <span class="english-text">Events</span>
+              <span class="telugu-text">ఈవెంట్స్</span>
+            </a></li>
+          <li><a href="contact.html">
+              <span class="english-text">Contact</span>
+              <span class="telugu-text">సంప్రదించండి</span>
+            </a></li>
+        </ul>
+      </nav>
+      <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
-</header>
+    <nav class="mobile-nav" id="mobileNav">
+      <ul class="nav-links">
+        <li><a href="home.html">
+            <span class="english-text">Home</span>
+            <span class="telugu-text">హోమ్</span>
+          </a></li>
+        <li><a href="sermons.html">
+            <span class="english-text">Sermons</span>
+            <span class="telugu-text">ప్రసంగాలు</span>
+          </a></li>
+        <li><a href="ministries.html">
+            <span class="english-text">Ministries</span>
+            <span class="telugu-text">సేవలు</span>
+          </a></li>
+        <li><a href="events.html">
+            <span class="english-text">Events</span>
+            <span class="telugu-text">ఈవెంట్స్</span>
+          </a></li>
+        <li><a href="contact.html">
+            <span class="english-text">Contact</span>
+            <span class="telugu-text">సంప్రదించండి</span>
+          </a></li>
+      </ul>
+    </nav>
+  </header>
+  
