--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -1,16 +1,21 @@
+<!-- Common footer code -->
 <footer>
     <div class="footer-container">
-        <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
-        <div class="social-icons">
-            <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
-                <img src="images/youtube.png" alt="YouTube">
-            </a>
-            <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com/holy.jesus132" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-        </div>
+      <p>&copy; 2025 Holy Spirit Prayer House | 
+         <span class="english-text">All Rights Reserved</span>
+         <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
+      </p>
+      <div class="social-icons">
+        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube">
+          <img src="images/youtube.png" alt="YouTube">
+        </a>
+        <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram">
+          <img src="images/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook">
+          <img src="images/facebook.png" alt="Facebook">
+        </a>
+      </div>
     </div>
-</footer>
+  </footer>
+  
