--- a/frontend/about.html
+++ b/frontend/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us - Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
+  <title>About Us - Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/script.js" defer></script>
   <script>
@@ -13,39 +13,57 @@
   </script>
 </head>
 <body class="english">
-  <!-- Language Toggle Button (Top Center) -->
+  <!-- Language Toggle Button -->
   <div class="language-toggle">
     <button onclick="toggleLanguage('english')">English</button>
     <button onclick="toggleLanguage('telugu')">తెలుగు</button>
   </div>
-  
+
   <!-- Include the header -->
   <div id="header-container"></div>
-  
-  <!-- Contact Section -->
+
+  <!-- About Us Section -->
   <section class="page-content">
     <h1>
-      <span class="english-text">Contact Us</span>
-      <span class="telugu-text">మమ్మల్ని సంప్రదించండి</span>
+      <span class="english-text">About Us</span>
+      <span class="telugu-text">మా గురించి</span>
     </h1>
+
     <p>
-      <span class="english-text">Email: pastorpmoses2014@gmail.com</span>
-      <span class="telugu-text">ఇమెయిల్: pastorpmoses2014@gmail.com</span>
+      <span class="english-text">
+        We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
+      </span>
+      <span class="telugu-text">
+        మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే పేరు కలిగిన చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
+      </span>
     </p>
+
     <p>
-      <span class="english-text">Phone: +91 9848315170</span>
-      <span class="telugu-text">ఫోన్: +91 9848315170</span>
+      <span class="english-text">
+        We are called according to the promise in Acts 2:38-39:<br>
+        “Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins. And you will receive the gift of the Holy Spirit. The promise is for you and your children and for all who are far off—for all whom the Lord our God will call.”
+      </span>
+      <span class="telugu-text">
+        మనమందరం అపొస్తలుల కార్యములు 2:38-39 వాగ్దానం ప్రకారం పిలవబడ్డాము:<br>
+        “మీ పాపముల క్షమాపణ కొరకు మీలో ప్రతి ఒక్కడు యేసుక్రీస్తు నామమునందు బాప్తిస్మము పొందుడి; మీరు పవిత్రాత్మ యొక్క బహుమతిని పొందుదురు. ఈ వాగ్దానం మీకును మీ పిల్లలకును దూరముగా ఉన్నవారికిని, మన దేవుడైన ప్రభువు పిలిచిన వారందరికిని వర్తించును.”
+      </span>
     </p>
+
+    <h2>
+      <span class="english-text">Our Mission (What we do)</span>
+      <span class="telugu-text">మా లక్ష్యం (మేము ఏమి చేస్తాము)</span>
+    </h2>
+
     <p>
-      <span class="english-text">Phone: +1 (551) 697-6451</span>
-      <span class="telugu-text">ఫోన్: +1 (551) 697-6451</span>
-    </p>
-    <p>
-      <span class="english-text">Address: 94 Street, Andhra Pradesh, India</span>
-      <span class="telugu-text">చిరునామా: 94 వీధి, ఆంధ్రప్రదేశ్, ఇండియా</span>
+      <span class="english-text">
+        We introduce our God the Father, His Son and our Friend Jesus, and the Holy Spirit. We help people discover hope, develop faith, and demonstrate love by following the way of Jesus through the Word of God (The Bible) and the guidance of the Holy Spirit.
+      </span>
+      <span class="telugu-text">
+        మేము మా పరలోక తండ్రిని, ఆయన కుమారుడైన మరియు మా స్నేహితుడైన యేసును, అలాగే పవిత్రాత్మను పరిచయం చేస్తాము. దేవుని వాక్యం (బైబిల్) మరియు పవిత్రాత్మ సహాయంతో, మేము ప్రజలు ఆశను కనుగొనడంలో, విశ్వాసాన్ని పెంపొందించడంలో, ప్రేమను ప్రదర్శించడంలో సహాయపడతాము.
+      </span>
     </p>
   </section>
-  
+
   <!-- Include the footer -->
   <div id="footer-container"></div>
 </body>
