--- a/frontend/about.html
+++ b/frontend/about.html
@@ -5,12 +5,47 @@
   <title>About Us - Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/script.js" defer></script>
+
+  <!-- Inline Language Toggle Logic -->
   <script>
     function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
       document.body.classList.remove("english", "telugu");
       document.body.classList.add(lang);
     }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.add(savedLang);
+    });
   </script>
+
+  <!-- Language Toggle Styling -->
+  <style>
+    .language-toggle {
+      text-align: center;
+      padding: 20px 0;
+    }
+    .language-toggle button {
+      margin: 0 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #fff;
+      color: #5f6368;
+      border-radius: 4px;
+      font-family: 'Roboto', sans-serif;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+    .language-toggle button:hover {
+      background-color: #f1f3f4;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+  </style>
 </head>
 <body class="english">
   <!-- Language Toggle Button -->
