--- a/frontend/donate.html
+++ b/frontend/donate.html
@@ -16,14 +16,47 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/founder.css">
   <link rel="stylesheet" href="css/chatbot.css">
-  
+
   <!-- Language Toggle Script -->
   <script>
     function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
       document.body.classList.remove("english", "telugu");
       document.body.classList.add(lang);
     }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.add(savedLang);
+    });
   </script>
+
+  <!-- Toggle Style -->
+  <style>
+    .language-toggle {
+      text-align: center;
+      padding: 20px 0;
+    }
+    .language-toggle button {
+      margin: 0 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #fff;
+      color: #5f6368;
+      border-radius: 4px;
+      font-family: 'Roboto', sans-serif;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+    .language-toggle button:hover {
+      background-color: #f1f3f4;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+  </style>
 </head>
 <body class="english">
   <!-- Language Toggle Button (Top Center) -->
@@ -66,6 +99,7 @@
           <span class="telugu-text">దానం చేయండి</span>
         </a>
       </div>
+
       <div class="donation-option">
         <h2>
           <span class="english-text">Bank Transfer</span>
@@ -73,7 +107,7 @@
         </h2>
         <p>
           <span class="english-text">Transfer funds directly to our bank account.</span>
-          <span class="telugu-text">మా బ్యాంక్ ఖాతాకు నేరుగా రుసుములను బదిలీ చేయండి.</span>
+          <span class="telugu-text">మా బ్యాంక్ ఖాతాకు నేరుగా నిధులు బదిలీ చేయండి.</span>
         </p>
         <p>
           <span class="english-text">Account Number: 123456789</span>
