--- a/frontend/sermons.html
+++ b/frontend/sermons.html
@@ -1,23 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sermons - HOLY SPIRIT PRAYER HOUSE</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Sermons - Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/script.js" defer></script>
+
+  <!-- Language Toggle Logic -->
+  <script>
+    function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
+      document.body.classList.remove("english", "telugu");
+      document.body.classList.add(lang);
+    }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.add(savedLang);
+    });
+  </script>
+
+  <!-- Language Toggle Styling -->
+  <style>
+    .language-toggle {
+      text-align: center;
+      padding: 20px 0;
+    }
+    .language-toggle button {
+      margin: 0 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background-color: #fff;
+      color: #5f6368;
+      border-radius: 4px;
+      font-family: 'Roboto', sans-serif;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+    .language-toggle button:hover {
+      background-color: #f1f3f4;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+  </style>
 </head>
-<body>
+<body class="english">
+  <!-- ✅ Language Toggle -->
+  <div class="language-toggle">
+    <button onclick="toggleLanguage('english')">English</button>
+    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
+  </div>
 
-    <!-- ✅ Include the header -->
-    <div id="header-container"></div>
+  <!-- ✅ Include the header -->
+  <div id="header-container"></div>
 
-    <!-- ✅ Sermons Section -->
-    <section class="page-content">
-        <h1>Our Sermons</h1>
-        <p>Listen to inspiring messages and teachings that strengthen faith and bring hope.</p>
-    </section>
+  <!-- ✅ Sermons Section -->
+  <section class="page-content">
+    <h1>
+      <span class="english-text">Our Sermons</span>
+      <span class="telugu-text">మన సందేశాలు</span>
+    </h1>
+    <p>
+      <span class="english-text">Listen to inspiring messages and teachings that strengthen faith and bring hope.</span>
+      <span class="telugu-text">విశ్వాసాన్ని బలోపేతం చేసే, ఆశను కలిగించే ప్రేరణాత్మక సందేశాలు మరియు బోధనలు వినండి.</span>
+    </p>
+  </section>
 
-    <!-- ✅ Include the footer -->
-    <div id="footer-container"></div>
-
+  <!-- ✅ Include the footer -->
+  <div id="footer-container"></div>
 </body>
 </html>
